Added MS people (incl. RestoreDB), and connections
