# index.js
@@ -10,6 +10,7 @@ import adminRoutes from "./routes/admin.routes.js";
 import postRoutes from "./routes/post.routes.js";
 import userRoutes from "./routes/user.routes.js";
 import dashboardRoutes from "./routes/dashboard.routes.js";
+import connectionRoutes from "./routes/connection.routes.js";
 
 const require = createRequire(import.meta.url);
 const swaggerFile = require("./swagger-output.json");
@@ -34,6 +35,7 @@ app.use("/", adminRoutes);
 app.use("/posts", postRoutes);
 app.use("/users", userRoutes);
 app.use("/dashboard", dashboardRoutes);
+app.use("/connections", connectionRoutes);
 
 app.use((req, res) =>
   fail(res, 404, `Cannot ${req.method} ${req.originalUrl}`),
